created midterm, final

--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
                     <img src = "assets/images/folder.png">
                 </a>
             </div>
+            <div class = "home-page-folder">
+                <h1>
+                    Midterm
+                </h1>
+                <a href = "midterm/index.html">
+                    <img src = "assets/images/folder.png">
+                </a>
+            </div>
+            <div class = "home-page-folder">
+                <h1>
+                    Final
+                </h1>
+                <a href = "final/index.html">
+                    <img src = "assets/images/folder.png">
+                </a>
+            </div>
         </div>
     </body>
 </html>
