--- a/homeworks/index.html
+++ b/homeworks/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel = "stylesheet" href = "https://fonts.googleapis.com/css?family=Karla">
-        <link rel = "stylesheet" href = "../assets/css/subdirectory.css">
+        <link rel = "stylesheet" href = "../DONOTTOUCH/css/subdirectory.css">
     </head>
     <body>
         <div id = "overall-container">
@@ -11,7 +11,7 @@
                     Homework 1
                 </h1>
                 <a href = "hw1/index.html">
-                    <img src = "../assets/images/folder.png">
+                    <img src = "../DONOTTOUCH/images/folder.png">
                 </a>
             </div>
             <div class = "home-page-folder">
@@ -19,7 +19,7 @@
                     Homework 2
                 </h1>
                 <a href = "hw2/index.html">
-                    <img src = "../assets/images/folder.png">
+                    <img src = "../DONOTTOUCH/images/folder.png">
                 </a>
             </div>
             <div class = "home-page-folder">
@@ -27,7 +27,7 @@
                     Homework 3
                 </h1>
                 <a href = "hw3/index.html">
-                    <img src = "../assets/images/folder.png">
+                    <img src = "../DONOTTOUCH/images/folder.png">
                 </a>
             </div>
             <div class = "home-page-folder">
@@ -35,7 +35,7 @@
                     Homework 4
                 </h1>
                 <a href = "hw4/index.html">
-                    <img src = "../assets/images/folder.png">
+                    <img src = "../DONOTTOUCH/images/folder.png">
                 </a>
             </div>
             <div class = "home-page-folder">
@@ -43,7 +43,7 @@
                     Homework 5
                 </h1>
                 <a href = "hw5/index.html">
-                    <img src = "../assets/images/folder.png">
+                    <img src = "../DONOTTOUCH/images/folder.png">
                 </a>
             </div>
             <div class = "home-page-folder">
@@ -51,7 +51,7 @@
                     Homework 6
                 </h1>
                 <a href = "hw6/index.html">
-                    <img src = "../assets/images/folder.png">
+                    <img src = "../DONOTTOUCH/images/folder.png">
                 </a>
             </div>
             <div class = "home-page-folder">
@@ -59,7 +59,7 @@
                     Homework 7
                 </h1>
                 <a href = "hw7/index.html">
-                    <img src = "../assets/images/folder.png">
+                    <img src = "../DONOTTOUCH/images/folder.png">
                 </a>
             </div>
             <div class = "home-page-folder">
@@ -67,7 +67,7 @@
                     Homework 8
                 </h1>
                 <a href = "hw8/index.html">
-                    <img src = "../assets/images/folder.png">
+                    <img src = "../DONOTTOUCH/images/folder.png">
                 </a>
             </div>
             <div class = "home-page-folder">
@@ -75,7 +75,7 @@
                     Homework 9
                 </h1>
                 <a href = "hw9/index.html">
-                    <img src = "../assets/images/folder.png">
+                    <img src = "../DONOTTOUCH/images/folder.png">
                 </a>
             </div>
             <div class = "home-page-folder">
@@ -83,7 +83,7 @@
                     Homework 10
                 </h1>
                 <a href = "hw10/index.html">
-                    <img src = "../assets/images/folder.png">
+                    <img src = "../DONOTTOUCH/images/folder.png">
                 </a>
             </div>
             <div class = "home-page-folder">
@@ -91,7 +91,7 @@
                     Homework 11
                 </h1>
                 <a href = "hw11/index.html">
-                    <img src = "../assets/images/folder.png">
+                    <img src = "../DONOTTOUCH/images/folder.png">
                 </a>
             </div>
             <div class = "home-page-folder">
@@ -99,7 +99,7 @@
                     Homework 12
                 </h1>
                 <a href = "hw12/index.html">
-                    <img src = "../assets/images/folder.png">
+                    <img src = "../DONOTTOUCH/images/folder.png">
                 </a>
             </div>
         </div>
