--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel = "stylesheet" href = "https://fonts.googleapis.com/css?family=Karla">
-        <link rel = "stylesheet" href = "assets/css/main-page.css">
+        <link rel = "stylesheet" href = "DONOTTOUCH/css/main-page.css">
     </head>
     <body>
         <div id = "overall-container">
@@ -11,7 +11,7 @@
                     Homeworks
                 </h1>
                 <a href = "homeworks/index.html">
-                    <img src = "assets/images/folder.png">
+                    <img src = "DONOTTOUCH/images/folder.png">
                 </a>
             </div>
             <div class = "home-page-folder">
@@ -19,7 +19,7 @@
                     Labs
                 </h1>
                 <a href = "labs/index.html">
-                    <img src = "assets/images/folder.png">
+                    <img src = "DONOTTOUCH/images/folder.png">
                 </a>
             </div>
             <div class = "home-page-folder">
@@ -27,7 +27,7 @@
                     Midterm
                 </h1>
                 <a href = "midterm/index.html">
-                    <img src = "assets/images/folder.png">
+                    <img src = "DONOTTOUCH/images/folder.png">
                 </a>
             </div>
             <div class = "home-page-folder">
@@ -35,7 +35,7 @@
                     Final
                 </h1>
                 <a href = "final/index.html">
-                    <img src = "assets/images/folder.png">
+                    <img src = "DONOTTOUCH/images/folder.png">
                 </a>
             </div>
         </div>
