--- a/labs/index.html
+++ b/labs/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel = "stylesheet" href = "https://fonts.googleapis.com/css?family=Karla">
-        <link rel = "stylesheet" href = "../assets/css/subdirectory.css">
+        <link rel = "stylesheet" href = "../DONOTTOUCH/css/subdirectory.css">
     </head>
     <body>
         <div id = "overall-container">
@@ -11,7 +11,7 @@
                     Lab 1
                 </h1>
                 <a href = "lab1/index.html">
-                    <img src = "../assets/images/folder.png">
+                    <img src = "../DONOTTOUCH/images/folder.png">
                 </a>
             </div>
             <div class = "home-page-folder">
@@ -19,7 +19,7 @@
                     Lab 2
                 </h1>
                 <a href = "lab2/index.html">
-                    <img src = "../assets/images/folder.png">
+                    <img src = "../DONOTTOUCH/images/folder.png">
                 </a>
             </div>
             <div class = "home-page-folder">
@@ -27,7 +27,7 @@
                     Lab 3
                 </h1>
                 <a href = "lab3/index.html">
-                    <img src = "../assets/images/folder.png">
+                    <img src = "../DONOTTOUCH/images/folder.png">
                 </a>
             </div>
             <div class = "home-page-folder">
@@ -35,7 +35,7 @@
                     Lab 4
                 </h1>
                 <a href = "lab4/index.html">
-                    <img src = "../assets/images/folder.png">
+                    <img src = "../DONOTTOUCH/images/folder.png">
                 </a>
             </div>
             <div class = "home-page-folder">
@@ -43,7 +43,7 @@
                     Lab 5
                 </h1>
                 <a href = "lab5/index.html">
-                    <img src = "../assets/images/folder.png">
+                    <img src = "../DONOTTOUCH/images/folder.png">
                 </a>
             </div>
             <div class = "home-page-folder">
@@ -51,7 +51,7 @@
                     Lab 6
                 </h1>
                 <a href = "lab6/index.html">
-                    <img src = "../assets/images/folder.png">
+                    <img src = "../DONOTTOUCH/images/folder.png">
                 </a>
             </div>
             <div class = "home-page-folder">
@@ -59,7 +59,7 @@
                     Lab 7
                 </h1>
                 <a href = "lab7/index.html">
-                    <img src = "../assets/images/folder.png">
+                    <img src = "../DONOTTOUCH/images/folder.png">
                 </a>
             </div>
             <div class = "home-page-folder">
@@ -67,7 +67,7 @@
                     Lab 8
                 </h1>
                 <a href = "lab8/index.html">
-                    <img src = "../assets/images/folder.png">
+                    <img src = "../DONOTTOUCH/images/folder.png">
                 </a>
             </div>
             <div class = "home-page-folder">
@@ -75,7 +75,7 @@
                     Lab 9
                 </h1>
                 <a href = "lab9/index.html">
-                    <img src = "../assets/images/folder.png">
+                    <img src = "../DONOTTOUCH/images/folder.png">
                 </a>
             </div>
             <div class = "home-page-folder">
@@ -83,7 +83,7 @@
                     Lab 10
                 </h1>
                 <a href = "lab10/index.html">
-                    <img src = "../assets/images/folder.png">
+                    <img src = "../DONOTTOUCH/images/folder.png">
                 </a>
             </div>
             <div class = "home-page-folder">
@@ -91,7 +91,7 @@
                     Lab 11
                 </h1>
                 <a href = "lab11/index.html">
-                    <img src = "../assets/images/folder.png">
+                    <img src = "../DONOTTOUCH/images/folder.png">
                 </a>
             </div>
             <div class = "home-page-folder">
@@ -99,7 +99,7 @@
                     Lab 12
                 </h1>
                 <a href = "lab12/index.html">
-                    <img src = "../assets/images/folder.png">
+                    <img src = "../DONOTTOUCH/images/folder.png">
                 </a>
             </div>
         </div>
